# portrayer

./: .gitignore  .travis.yml  Cargo.toml  README.md  azure-pipelines.yml  make-cube-map.sh  make-sphere-tex.sh  run-all-examples.py  run-all-examples.sh  sample_image_antialiasing.sh
assets/: README.md
examples/: antialiasing.rs  big-scene.rs  cube-mapping.rs  entering-the-mirror-dimension.rs  fish.rs  four-shapes.rs  glossy-reflection.rs  graphics-castle.rs  graphics-poster.rs  graphics-temple.rs  hier.rs  instance.rs  macho-cows.rs  monkeys-making-monkeys.rs  nonhier.rs  nonhier2.rs  normal-mapping.rs  primitives-simple.rs  primitives.rs  reflection.rs  robot-alarm-clock.rs  robot.rs  robot_alarm_clock.rs  simple-cows.rs  simple.rs  single-triangle.rs  smooth-shading.rs  soft-shadows.rs  texture-mapping.rs  transmission-refraction.rs  water-glass.rs
examples/full-scene/: scene.blend
render/: 09_kdtree_timing_data.csv  09_kdtree_timing_data.txt  10_kdtree_timing_data.txt
src/: arena.rs  bounded.rs  bounding_box.rs  camera.rs  flat_scene.rs  intersect.rs  kdtree.rs  lib.rs  light.rs  material.rs  math.rs  primitive.rs  ray.rs  render.rs  reporter.rs  scene.rs  texture.rs
src/kdtree/: kdmesh.rs  kdscene.rs  leaf.rs  node.rs
src/primitive/: bounding_volume.rs  cone.rs  cube.rs  cylinder.rs  finite_plane.rs  infinite_plane.rs  mesh.rs  plane.rs  sphere.rs  torus.rs  triangle.rs
