[package]
name = "portrayer"
version = "0.1.0"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]
edition = "2018"

[dependencies]
vek = "0.9"
image = "0.21"
tobj = "0.1"
derivative = "1.0"

[dev-dependencies]
assert_approx_eq = "1.1"

[profile.dev]
# Needed to make rendering fast even in debug mode
opt-level = 3

[features]
# Useful for debugging the Bounding-Volume-Hierarchy optimization for meshes
render_bounding_volumes = []
