[package]
name = "portrayer"
version = "0.1.0"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]
edition = "2018"

[dependencies]
vek = { version = "0.9", features = ["uv"] }
image = "0.21"
tobj = "0.1"
rayon = "1.1"
indicatif = "0.11"
rand = "0.7"

[dev-dependencies]
assert_approx_eq = "1.1"
pretty_assertions = "0.6"

[profile.dev]
# Needed to make rendering fast even in debug mode
opt-level = 3

[profile.release]
debug = true

[features]
# Useful for debugging the Bounding-Volume-Hierarchy optimization for meshes
render_bounding_volumes = []
